BL-2894 Fix Source bubble scroll bar
* remove scroll bar
* when a large bubble's textbox is selected,
   that bubble will overlap bubbles from other textboxes

--- a/src/BloomBrowserUI/bookEdit/css/qtipOverrides.less
+++ b/src/BloomBrowserUI/bookEdit/css/qtipOverrides.less
@@ -4,7 +4,7 @@
     padding-top: 0;
     padding-bottom: 0;
     padding-right: 20px;
-    overflow-y: auto;
+    overflow-y: hidden !important;
     max-height: inherit;
 
     .ui-sourceTextsForBubble {
